...
                                .padding(.horizontal)
                        }
                    }
                    .padding(.vertical, 5)
                }
                .tint(.primary)
                .accessibilityIdentifier("See more")
            }
            .padding(.leading, appLayout.hasSpaceForDrawer ? drawerSpace : 0)
            
            ScrollView(.horizontal, showsIndicators: false) {
                LazyHStack(spacing: Dimens.Home.cardSpacing.of(appLayout)) {
                    ForEach(section.sectionListItems, id: \.id) { item in
...
